--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -43,7 +43,8 @@
       </ul>
     </div>
     <div class="col-9">
-      <app-home></app-home>
+      <router-outlet></router-outlet>     
     </div>
   </div>
 </div>
+
